[workspace]

[package]
name = "saaq-latent"
version = "0.1.0"
edition = "2024"
description = "Standalone SAAQ latent-telemetry calibration + CSV emission, extracted from corinth-canal/src/latent.rs."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }

[[example]]
name = "single_row"
path = "examples/single_row.rs"
